@@ -285,10 +285,7 @@ void Fl_Gl_Window::flush() {
     glDrawBuffer(GL_BACK);
 
     if (!SWAP_TYPE) {
-#ifdef __APPLE_QD__
-      SWAP_TYPE = COPY;
-#elif defined __APPLE_QUARTZ__
-      // warning: the Quartz version should probably use Core GL (CGL) instead of AGL
+#if !defined(WIN32) // __APPLE__ || X11
       SWAP_TYPE = COPY;
 #else
       SWAP_TYPE = UNDEFINED;
@@ -298,6 +295,7 @@ void Fl_Gl_Window::flush() {
 	if (!strcmp(c,"COPY")) SWAP_TYPE = COPY;
 	else if (!strcmp(c, "NODAMAGE")) SWAP_TYPE = NODAMAGE;
 	else if (!strcmp(c, "SWAP")) SWAP_TYPE = SWAP;
+	else SWAP_TYPE = UNDEFINED;
       }
     }
 
@@ -312,6 +310,12 @@ void Fl_Gl_Window::flush() {
 
       // don't draw if only the overlay is damaged:
       if (damage() != FL_DAMAGE_OVERLAY || !save_valid) draw();
+      swap_buffers();
+
+    } else if (SWAP_TYPE == SWAP) {
+      damage(FL_DAMAGE_ALL);
+      draw();
+      if (overlay == this) draw_overlay();
       swap_buffers();
 
     } else { // SWAP_TYPE == UNDEFINED
@@ -350,7 +354,7 @@ void Fl_Gl_Window::flush() {
 
     }
 
-    if (overlay==this) { // fake overlay in front buffer
+    if (overlay==this && SWAP_TYPE != SWAP) { // fake overlay in front buffer
       glDrawBuffer(GL_FRONT);
       draw_overlay();
       glDrawBuffer(GL_BACK);
