@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.1.11
 
+	- Fixed OpenGL overlay drawing (STR #2437)
 	- Fixed Fl_Tabs selection border drawing, if tabs are at the bottom
 	  of the widget (part of STR #2480)
 	- Documentation fixes (STR #2410)
